2016-05-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.12.3 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2016-03-09  Konstantin Tokarev  <annulen@yandex.ru>

        [cmake] Fixed All-in-One build.
        https://bugs.webkit.org/show_bug.cgi?id=155241

        Reviewed by Csaba Osztrogonác.

        * Source/cmake/WebKitMacros.cmake: Last item of WebCore_SOURCES was
        not removed in PROCESS_ALLINONE_FILE.

2016-04-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.12.2 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2016-04-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Menu list button doesn't use the text color from the theme
        https://bugs.webkit.org/show_bug.cgi?id=118234

        Reviewed by Darin Adler.

        * ManualTests/gtk/theme.html: Add a disabled combo test.

2016-04-14  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.12.1 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2016-04-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Rework the theming code for GTK+ 3.20
        https://bugs.webkit.org/show_bug.cgi?id=156333

        Reviewed by Michael Catanzaro.

        Add a manual test to check how themed elements are rendered.

        * ManualTests/gtk/theme.html: Added.

2016-03-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.12.0 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2016-03-16  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.11.92 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2016-03-12  Jeremy Huddleston Sequoia  <jeremyhu@apple.com>
